# Rapid-Roll

./: .gitignore  Ball.cpp  Ball.h  CMakeLists.txt  CMakePresets.json  Color.h  Game.cpp  Game.h  Main.cpp  PhysicalObject.cpp  PhysicalObject.h  README.md  Rapid Roll.sln  Rapid Roll.vcxproj  Rapid Roll.vcxproj.filters  Shader.cpp  Shader.h  Step.cpp  Step.h  fragmentShader.glsl  glad.c  vcpkg-configuration.json  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
include/: Color.h  Game.h  PhysicalObject.h  Shader.h  Step.h
shaders/: fragmentShader.glsl  vertexShader.glsl
src/: Ball.cpp  Game.cpp  PhysicalObject.cpp  Shader.cpp  Step.cpp
