cmake_minimum_required(VERSION 3.2)
project(Rapid-Roll)
include_directories(${CMAKE_SOURCE_DIR}/include)
set(CMAKE_CXX_STANDARD 11)
file(GLOB SOURCES ${CMAKE_SOURCE_DIR}/src/*.cpp)
find_package(OpenGL REQUIRED)
find_package(GLU REQUIRED)
find_package(GLEW REQUIRED)
find_package(glfw3 REQUIRED)
add_executable(Rapid-Roll ${SOURCES})
target_link_libraries(Rapid-Roll glfw GLEW::GLEW OpenGL::GL)
target_compile_definitions(Rapid-Roll PRIVATE EXECUTABLE_PATH="${CMAKE_BINARY_DIR}")